--- a/styles.css
+++ b/styles.css
@@ -53,9 +53,9 @@ font-size: 10px;
 }
 
 .tech-card {
-  
+    
     align-self: center;
-    margin-right:20px;
+    margin-right:50px;
  }
 
  .h1 {
@@ -78,4 +78,8 @@ font-size: 10px;
      border-radius: 10px;
      border:0px;
      
+ }
+
+ .header-hero-wrapper {
+
  }
