--- a/styles.css
+++ b/styles.css
@@ -1,85 +1,189 @@
-.header-hero-wrapper {
-    background: #1F2937;
-    color: #f9f4f8;
-}
-
-  .header {
-display:flex;
-align-items: center;
-margin:10px;
-justify-content: space-around;
-font-size: 10px;
-}
-
-.header-links{
+body {
+    font-family: Arial, Helvetica, sans-serif;
     display:flex;
-    font-size: 18px;
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-    gap:10px;
-
-}
-
-.header-links a {
-    
-    font-family: 'Roboto', sans-serif;
-    color: #e5e7eb;
-    text-decoration: none;
-
-}
-
-.header-logo {
-    height:80px;
-    width:auto;
-}
-
-.body {
-    font-family: 'Roboto', sans-serif;
-    display:flex;
-    flex-direction: column;
-    margin:0;
-    min-height: 100vh;
-}
-
-
-.hero {
-    font-family: 'Roboto', sans-serif;
-    display:flex;
+    flex-flow: column wrap;
     justify-content: center;
-    margin:100px;
-    margin-left: 400px;
-    margin-right: 400px;
+    align-items: center;
+    padding:0px;
+    margin:0px;
+    
 }
 
-.tech-card {
+header, .intro, footer {
+    background-color: #8d6c83;
+    color: #f9faf8;   
+}
+
+
+header, .intro{
+    display: flex;
+    width:100%;
+    align-self: stretch;
+    align-items: center;
+    justify-content:space-around;
+    flex-flow: row wrap;
+    gap:15%;
+}
+
+.logo {
+    font-size: 24px;
+}
+
+.main h1 {
+    font-size: 48px;
+    font-weight: bolder;
+    align-self: flex-start;
+    margin-bottom: -16px;
+}
+
+.sidekick-text, li {
+    color:#e5e7eb;
+    font-size: 18px;
+}
+button {
+    background-color: #e978cd;
+    flex:0 1 auto;
+    width:100px;
+    height: 50px;
+    border-radius: 5px;
+    border: none;
+    color:#f9faf8;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
+
+header ul {
+    display:flex;
+    gap:16px;
+}
+
+li {
+    list-style: none;
+    font-size: 14px;
+}
+
+a {
+    text-decoration: none;
+    color: #f9faf8;
+}
+a:hover {
+    color: #cc3d74;
+}
+
+.intro{
+    padding-bottom: 100px;
+    gap:32px;
+}
+
+.intro-text {
+    margin-left:15%;
+    display:flex;
+    flex-flow: column wrap;
+    flex:1;
+}
+
+.image {
+    flex:1;
+    display:flex;
+    align-self: stretch;
+    justify-content: center;
+    align-items:center;
+    background-color: #e5e7eb;
+    color:#1F2937;
+    margin-top: 40px;
+    margin-right: 15%;
+    min-width:300px;
+}
+.main {
+
+    display: flex;
+    align-self: stretch;
+    align-items: center;
+    justify-content:space-between;
+    background-color: #f9faf8;
+    color: #000000;
+    flex-flow: column wrap;
+}
+.content {
+    flex-wrap: wrap;
+}
+
+.content h2{
+    font-size: 36px;
+    font-weight: bolder;
+    text-align: center;
+
+}
+
+.cards {
+    display:flex;
+    justify-content: space-around;
+    gap:32px;
+    flex-flow: row wrap;
+}
+
+.card {
+    max-width: 150px; 
+}
+
+.content-img {
+    width:144px;
+    height:144px;
+    border: 3px solid #bd7cad;
+    border-radius: 20px;
+}
+
+.quote {
+    padding:32px 25%;
+    background-color: #e5e7eb;
+    font-size: 36px;
+    font-weight:lighter;
+    font-style: italic;
+}
+.author {
+    display: flex;
+    flex-direction: row-reverse;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.sign-up-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:32px;
+    padding:36px;
+    background-color: #f785c4;
+    border-radius: 5px;
+    margin:100px auto;
+    color: #f9faf8;
+    flex-flow: row wrap;
     
-    align-self: center;
-    margin-right:50px;
- }
+}
 
- .h1 {
-     font-size:480px;
-     font-weight: 900;
-     color: #f9f4f8;
-     padding:0px;
-     margin:0px;
- }
+.sign-up-section button {
+    border: 2px solid #f9faf8;
+    display: flex;
+    align-items: center;
+}
 
- .hero-text {
-     color:#e5e7eb;
- }
+button:hover {
+    background-color: #f9faf8;
+    color: #91327c;
+}
 
- .sign-up {
-     background-color: #3882f6;
-     color: #e5e7eb;
-     font-weight: 900;
-     padding: 5px 20px;
-     border-radius: 10px;
-     border:0px;
-     
- }
+.sign-up-section p {
+    margin:0px;
+}
 
- .header-hero-wrapper {
+.small {
+    font-size: 12px;
+}
 
- }
+footer {
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 24px 0px;
+    align-self: stretch;
+}
